# k8s-diagram-previewer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README  README.md  diagram.py  kinds.py  pull_cluster_info.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
example_yaml/: deployment.yaml  ingress.yaml  pod.yaml  service.yaml
examples/helm/: Chart.yaml  values.yaml
examples/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
examples/helm/templates/tests/: test-connection.yaml
examples/yaml/: canary_config.yaml  deployment.yaml  pod.yaml  secret.yaml
k8s_diagram/: app.py  diagram.py  pull_cluster_info.sh
